--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,7 +43,7 @@
                 android:layout_width="75dp"
                 android:layout_height="60dp"
                 android:layout_margin="3dp"
-                android:background="#A72C2C"
+                android:background="@drawable/rounded_button_red"
                 android:text="C"
                 android:textColor="#FFFFFF"
                 android:textSize="24sp"
@@ -52,12 +52,13 @@
 
             <Button
                 android:id="@+id/button37"
+                style="@android:style/Widget.Button"
                 android:layout_width="75dp"
                 android:layout_height="60dp"
                 android:layout_row="0"
                 android:layout_column="1"
                 android:layout_margin="3dp"
-                android:background="#575D5F"
+                android:background="@drawable/rounded_button_gray"
                 android:text="1"
                 android:textColor="#FFFFFF"
                 android:textSize="24sp" />
@@ -69,7 +70,7 @@
                 android:layout_row="0"
                 android:layout_column="2"
                 android:layout_margin="3dp"
-                android:background="#575D5F"
+                android:background="@drawable/rounded_button_gray"
                 android:text="2"
                 android:textColor="#FFFFFF"
                 android:textSize="24sp" />
@@ -81,7 +82,7 @@
                 android:layout_row="1"
                 android:layout_column="0"
                 android:layout_margin="3dp"
-                android:background="#6B5C53"
+                android:background="@drawable/rounded_button_brown"
                 android:text="+/-"
                 android:textColor="#FFFFFF"
                 android:textSize="24sp" />
@@ -93,7 +94,7 @@
                 android:layout_row="1"
                 android:layout_column="1"
                 android:layout_margin="3dp"
-                android:background="#575D5F"
+                android:background="@drawable/rounded_button_gray"
                 android:text="3"
                 android:textColor="#FFFFFF"
                 android:textSize="24sp" />
@@ -105,7 +106,7 @@
                 android:layout_row="1"
                 android:layout_column="2"
                 android:layout_margin="3dp"
-                android:background="#575D5F"
+                android:background="@drawable/rounded_button_gray"
                 android:text="4"
                 android:textColor="#FFFFFF"
                 android:textSize="24sp" />
@@ -117,7 +118,7 @@
                 android:layout_row="2"
                 android:layout_column="0"
                 android:layout_margin="3dp"
-                android:background="#D5D5D5"
+                android:background="@drawable/rounded_button_white2"
                 android:text="√"
                 android:textSize="24sp" />
 
@@ -128,7 +129,7 @@
                 android:layout_row="2"
                 android:layout_column="1"
                 android:layout_margin="3dp"
-                android:background="#575D5F"
+                android:background="@drawable/rounded_button_gray"
                 android:text="5"
                 android:textColor="#FFFFFF"
                 android:textSize="24sp" />
@@ -140,7 +141,7 @@
                 android:layout_row="2"
                 android:layout_column="2"
                 android:layout_margin="3dp"
-                android:background="#575D5F"
+                android:background="@drawable/rounded_button_gray"
                 android:text="6"
                 android:textColor="#FFFFFF"
                 android:textSize="24sp" />
@@ -152,7 +153,7 @@
                 android:layout_row="3"
                 android:layout_column="0"
                 android:layout_margin="3dp"
-                android:background="#D5D5D5"
+                android:background="@drawable/rounded_button_white2"
                 android:text="x&#8319;"
                 android:textSize="24sp" />
 
@@ -163,7 +164,7 @@
                 android:layout_row="3"
                 android:layout_column="1"
                 android:layout_margin="3dp"
-                android:background="#575D5F"
+                android:background="@drawable/rounded_button_gray"
                 android:text="7"
                 android:textColor="#FFFFFF"
                 android:textSize="24sp" />
@@ -175,7 +176,7 @@
                 android:layout_row="3"
                 android:layout_column="2"
                 android:layout_margin="3dp"
-                android:background="#575D5F"
+                android:background="@drawable/rounded_button_gray"
                 android:text="8"
                 android:textColor="#FFFFFF"
                 android:textSize="24sp" />
@@ -187,7 +188,7 @@
                 android:layout_row="4"
                 android:layout_column="1"
                 android:layout_margin="3dp"
-                android:background="#575D5F"
+                android:background="@drawable/rounded_button_gray"
                 android:text="9"
                 android:textColor="#FFFFFF"
                 android:textSize="24sp" />
@@ -199,7 +200,7 @@
                 android:layout_row="4"
                 android:layout_column="2"
                 android:layout_margin="3dp"
-                android:background="#575D5F"
+                android:background="@drawable/rounded_button_gray"
                 android:text="0"
                 android:textColor="#FFFFFF"
                 android:textSize="24sp" />
@@ -211,7 +212,7 @@
                 android:layout_row="4"
                 android:layout_column="0"
                 android:layout_margin="3dp"
-                android:background="#D5D5D5"
+                android:background="@drawable/rounded_button_white2"
                 android:text="%"
                 android:textSize="24sp" />
 
@@ -222,7 +223,7 @@
                 android:layout_row="5"
                 android:layout_column="1"
                 android:layout_margin="3dp"
-                android:background="#575D5F"
+                android:background="@drawable/rounded_button_gray"
                 android:text="("
                 android:textColor="#FFFFFF"
                 android:textSize="24sp" />
@@ -234,7 +235,7 @@
                 android:layout_row="5"
                 android:layout_column="2"
                 android:layout_margin="3dp"
-                android:background="#575D5F"
+                android:background="@drawable/rounded_button_gray"
                 android:text=")"
                 android:textColor="#FFFFFF"
                 android:textSize="24sp" />
@@ -247,7 +248,7 @@
                 android:layout_rowSpan="6"
                 android:layout_column="0"
                 android:layout_margin="3dp"
-                android:background="#D5D5D5"
+                android:background="@drawable/rounded_button_white2"
                 android:text="+"
                 android:textSize="24sp" />
 
@@ -258,7 +259,7 @@
                 android:layout_row="6"
                 android:layout_column="1"
                 android:layout_margin="3dp"
-                android:background="#D5D5D5"
+                android:background="@drawable/rounded_button_white2"
                 android:text="-"
                 android:textSize="24sp" />
 
@@ -269,7 +270,7 @@
                 android:layout_row="6"
                 android:layout_column="2"
                 android:layout_margin="3dp"
-                android:background="#D5D5D5"
+                android:background="@drawable/rounded_button_white2"
                 android:text="X"
                 android:textSize="24sp" />
 
@@ -296,7 +297,7 @@
                         android:layout_width="65dp"
                         android:layout_height="42dp"
                         android:layout_margin="3dp"
-                        android:background="#FDFDFD"
+                        android:background="@drawable/rounded_button_white"
                         android:text="1" />
 
                     <Button
@@ -304,7 +305,7 @@
                         android:layout_width="65dp"
                         android:layout_height="42dp"
                         android:layout_margin="3dp"
-                        android:background="#FDFDFD"
+                        android:background="@drawable/rounded_button_white"
                         android:text="2" />
 
                     <Button
@@ -312,7 +313,7 @@
                         android:layout_width="65dp"
                         android:layout_height="42dp"
                         android:layout_margin="3dp"
-                        android:background="#FDFDFD"
+                        android:background="@drawable/rounded_button_white"
                         android:text="3" />
 
                     <Button
@@ -320,7 +321,7 @@
                         android:layout_width="65dp"
                         android:layout_height="42dp"
                         android:layout_margin="3dp"
-                        android:background="#FDFDFD"
+                        android:background="@drawable/rounded_button_white"
                         android:text="4" />
 
                     <Button
@@ -328,7 +329,7 @@
                         android:layout_width="65dp"
                         android:layout_height="42dp"
                         android:layout_margin="3dp"
-                        android:background="#FDFDFD"
+                        android:background="@drawable/rounded_button_white"
                         android:text="5" />
 
                     <Button
@@ -336,7 +337,7 @@
                         android:layout_width="65dp"
                         android:layout_height="42dp"
                         android:layout_margin="3dp"
-                        android:background="#FDFDFD"
+                        android:background="@drawable/rounded_button_white"
                         android:text="6" />
 
                     <Button
@@ -344,7 +345,7 @@
                         android:layout_width="65dp"
                         android:layout_height="42dp"
                         android:layout_margin="3dp"
-                        android:background="#FDFDFD"
+                        android:background="@drawable/rounded_button_white"
                         android:text="7" />
 
                     <Button
@@ -352,7 +353,7 @@
                         android:layout_width="65dp"
                         android:layout_height="42dp"
                         android:layout_margin="3dp"
-                        android:background="#FDFDFD"
+                        android:background="@drawable/rounded_button_white"
                         android:text="8" />
 
                     <Button
@@ -360,7 +361,7 @@
                         android:layout_width="65dp"
                         android:layout_height="42dp"
                         android:layout_margin="3dp"
-                        android:background="#FDFDFD"
+                        android:background="@drawable/rounded_button_white"
                         android:text="9" />
 
                     <Button
@@ -368,7 +369,7 @@
                         android:layout_width="65dp"
                         android:layout_height="42dp"
                         android:layout_margin="3dp"
-                        android:background="#FDFDFD"
+                        android:background="@drawable/rounded_button_white"
                         android:text="0" />
 
                     <Button
@@ -378,7 +379,7 @@
                         android:layout_columnSpan="2"
                         android:layout_gravity="fill"
                         android:layout_margin="3dp"
-                        android:background="#FDFDFD"
+                        android:background="@drawable/rounded_button_white"
                         android:text="⬅" />
 
 
@@ -396,7 +397,7 @@
                         android:layout_width="65dp"
                         android:layout_height="42dp"
                         android:layout_margin="3dp"
-                        android:background="#FDFDFD"
+                        android:background="@drawable/rounded_button_white"
                         android:text="1" />
 
                     <Button
@@ -404,7 +405,7 @@
                         android:layout_width="65dp"
                         android:layout_height="42dp"
                         android:layout_margin="3dp"
-                        android:background="#FDFDFD"
+                        android:background="@drawable/rounded_button_white"
                         android:text="2" />
 
                     <Button
@@ -412,7 +413,7 @@
                         android:layout_width="65dp"
                         android:layout_height="42dp"
                         android:layout_margin="3dp"
-                        android:background="#FDFDFD"
+                        android:background="@drawable/rounded_button_white"
                         android:text="3" />
 
                     <Button
@@ -420,7 +421,7 @@
                         android:layout_width="65dp"
                         android:layout_height="42dp"
                         android:layout_margin="3dp"
-                        android:background="#FDFDFD"
+                        android:background="@drawable/rounded_button_white"
                         android:text="4" />
 
                     <Button
@@ -428,7 +429,7 @@
                         android:layout_width="65dp"
                         android:layout_height="42dp"
                         android:layout_margin="3dp"
-                        android:background="#FDFDFD"
+                        android:background="@drawable/rounded_button_white"
                         android:text="5" />
 
                     <Button
@@ -436,7 +437,7 @@
                         android:layout_width="65dp"
                         android:layout_height="42dp"
                         android:layout_margin="3dp"
-                        android:background="#FDFDFD"
+                        android:background="@drawable/rounded_button_white"
                         android:text="6" />
 
                     <Button
@@ -444,7 +445,7 @@
                         android:layout_width="65dp"
                         android:layout_height="42dp"
                         android:layout_margin="3dp"
-                        android:background="#FDFDFD"
+                        android:background="@drawable/rounded_button_white"
 
                         android:text="7" />
 
@@ -453,7 +454,7 @@
                         android:layout_width="65dp"
                         android:layout_height="42dp"
                         android:layout_margin="3dp"
-                        android:background="#FDFDFD"
+                        android:background="@drawable/rounded_button_white"
                         android:text="8" />
 
                     <Button
@@ -461,7 +462,7 @@
                         android:layout_width="65dp"
                         android:layout_height="42dp"
                         android:layout_margin="3dp"
-                        android:background="#FDFDFD"
+                        android:background="@drawable/rounded_button_white"
                         android:text="9" />
 
                     <Button
@@ -469,7 +470,7 @@
                         android:layout_width="65dp"
                         android:layout_height="42dp"
                         android:layout_margin="3dp"
-                        android:background="#FDFDFD"
+                        android:background="@drawable/rounded_button_white"
                         android:text="0" />
 
                     <Button
@@ -479,7 +480,7 @@
                         android:layout_columnSpan="2"
                         android:layout_gravity="fill"
                         android:layout_margin="3dp"
-                        android:background="#FDFDFD"
+                        android:background="@drawable/rounded_button_white"
                         android:text="⬅" />
 
 
@@ -493,7 +494,7 @@
                 android:layout_row="6"
                 android:layout_column="3"
                 android:layout_margin="3dp"
-                android:background="#D5D5D5"
+                android:background="@drawable/rounded_button_white2"
                 android:text="÷"
                 android:textSize="24sp" />
 
@@ -504,7 +505,7 @@
                 android:layout_row="6"
                 android:layout_column="5"
                 android:layout_margin="3dp"
-                android:background="#FC6500"
+                android:background="@drawable/rounded_button_orange"
                 android:text="="
                 android:textSize="24sp" />
 
